# literature_search

./: .gitignore  CHANGELOG.md  NEW_DATABASES.md  README.md  build.sh  copilot-instructions.md  europe_pmc_results.json  prisma_guidelines.md  prisma_review.py  pyproject.toml  requirements.txt  requirnment.txt  sample_input.json  sample_input_comma_separated.json  sample_output.csv  sample_prisma_method.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml
docs/: MAINTAINING_DOCS.md  README.md  SETUP.md  _config.yml  configuration.md  contributing.md  databases.md  faq.md  index.md  installation.md  usage.md
src/literature_review_shanaka/: __init__.py  api_clients.py  cli.py  config_loader.py  keywords.py  prisma_flow_diagram.drawio  prisma_logs.py  utils.py
src/literature_search/: __init__.py  api_clients.py  cli.py  config_loader.py  criteria_mapper.py  keywords.py  prisma_logs.py  utils.py
src/literature_search_shanaka/: __init__.py  api_clients.py  cli.py  config_loader.py  keywords.py  prisma_flow_diagram.drawio  prisma_logs.py  utils.py
src/research_search_shanaka/: api_clients.py  cli.py  config_loader.py  keywords.py  prisma_logs.py
src/research_search_shanaka.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_api_clients_new.py  test_config_loader.py  test_criteria_mapper.py  test_integration_criteria.py  test_keywords.py  test_prisma_logs.py  test_utils.py
