[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature_search"
version = "0.0.3"
authors = [
  { name="Shanaka Prageeth", email="wasp.bites.jp@gmail.com" },
]
description = "This package search for literature on multiple databases and allow uses to filter them using PRISMA method"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.10.3",
    "drawpyo>=0.2.2",
    "requests",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
license = {text = "GPL-3.0-only"}

[project.urls]
Homepage = "https://github.com/shanakaprageeth/literature_search"
Issues = "https://github.com/shanakaprageeth/literature_search/issues"

[project.scripts]
literature-search = "literature_search.cli:main"

[tool.setuptools.package-data]
"literature_search" = ["prisma_flow_diagram.drawio"]
